<resources>
    <string name="app_name">Food-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_from_your_favourite_stores_or_vendors">Order from your favourite stores or vendors</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcome_friend_enter_your_details_so_lets_get_started_in_ordering_food">Welcome friend, enter your details so lets get started in ordering food.</string>
    <string name="enter_email">Enter email</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_to_my_account">Login to my account</string>
    <string name="login_to_your_account">Login to your account</string>
</resources>