<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="28dp"
        tools:context=".presentation.main.MainActivity">

        <ImageView
            android:id="@+id/appIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createAccountTextView"
            style="@style/header_1"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/create_an_account"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appIconImageView" />

        <TextView
            android:id="@+id/signInMessageTextView"
            style="@style/body_regular"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/welcome_friend_enter_your_details_so_lets_get_started_in_ordering_food"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTextView" />


        <TextView
            android:id="@+id/emailTextView"
            style="@style/body_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="50dp"
            android:text="@string/email_address"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/signInMessageTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            style="@style/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_email"
            android:minWidth="335dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <TextView
            android:id="@+id/passwordTextView"
            style="@style/body_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            style="@style/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_marginTop="10dp"

            android:hint="@string/enter_password"
            android:minWidth="335dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <TextView
            android:id="@+id/confirmPasswordTextView"
            style="@style/body_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"

            app:layout_constraintStart_toStartOf="@+id/confirmPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirmPasswordEditText"
            style="@style/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailTextView"
            android:layout_marginTop="10dp"

            android:hint="@string/confirm_password"
            android:minWidth="335dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextView" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            style="@style/primaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_an_account"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            style="@style/ghostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_to_my_account"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>